--- a/foursquare_climate.ipynb
+++ b/foursquare_climate.ipynb
@@ -54,7 +54,6 @@
     "    return closest_station\n",
     "\n",
     "station_lat_long = climate_data[['STATION_NAME', 'LATITUDE', 'LONGITUDE']].drop_duplicates()\n",
-    "climate_data['lat_long'] = [(x, y) for x,y in zip(climate_data['LATITUDE'], climate_data['LONGITUDE'])]\n",
     "foursquare_data['lat_long'] = [(x, y) for x,y in zip(foursquare_data['latitude'], foursquare_data['longitude'])]                                       \n",
     "station_lat_long['lat_long'] = [(x, y) for x,y in zip(station_lat_long['LATITUDE'], station_lat_long['LONGITUDE'])]\n",
     "\n",
@@ -144,90 +143,6 @@
     "climate_data.sort_values('DATE', inplace=True)\n",
     "foursquare_data.utcTimestamp = pd.to_datetime(foursquare_data.utcTimestamp, utc=True)\n",
     "foursquare_data.sort_values('utcTimestamp', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       2012-04-12 00:50:00\n",
-       "1       2012-04-12 01:00:00\n",
-       "2       2012-04-12 01:50:00\n",
-       "3       2012-04-12 02:50:00\n",
-       "4       2012-04-12 03:50:00\n",
-       "5       2012-04-12 04:00:00\n",
-       "6       2012-04-12 04:50:00\n",
-       "7       2012-04-12 05:50:00\n",
-       "8       2012-04-12 06:50:00\n",
-       "9       2012-04-12 07:00:00\n",
-       "10      2012-04-12 07:50:00\n",
-       "11      2012-04-12 08:50:00\n",
-       "12      2012-04-12 09:50:00\n",
-       "13      2012-04-12 10:00:00\n",
-       "14      2012-04-12 10:50:00\n",
-       "15      2012-04-12 11:50:00\n",
-       "16      2012-04-12 12:50:00\n",
-       "17      2012-04-12 13:00:00\n",
-       "18      2012-04-12 13:50:00\n",
-       "19      2012-04-12 14:50:00\n",
-       "20      2012-04-12 15:50:00\n",
-       "21      2012-04-12 16:00:00\n",
-       "22      2012-04-12 16:50:00\n",
-       "23      2012-04-12 17:50:00\n",
-       "24      2012-04-12 18:50:00\n",
-       "25      2012-04-12 19:00:00\n",
-       "26      2012-04-12 19:50:00\n",
-       "27      2012-04-12 20:50:00\n",
-       "28      2012-04-12 21:50:00\n",
-       "29      2012-04-12 22:00:00\n",
-       "                ...        \n",
-       "33659   2013-02-16 04:50:00\n",
-       "33660   2013-02-16 05:50:00\n",
-       "33661   2013-02-16 05:50:00\n",
-       "33662   2013-02-16 06:50:00\n",
-       "33663   2013-02-16 07:00:00\n",
-       "33664   2013-02-16 07:50:00\n",
-       "33665   2013-02-16 08:50:00\n",
-       "33666   2013-02-16 08:50:00\n",
-       "33667   2013-02-16 09:50:00\n",
-       "33668   2013-02-16 09:50:00\n",
-       "33669   2013-02-16 10:00:00\n",
-       "33670   2013-02-16 10:50:00\n",
-       "33671   2013-02-16 11:50:00\n",
-       "33672   2013-02-16 12:50:00\n",
-       "33673   2013-02-16 13:00:00\n",
-       "33674   2013-02-16 13:50:00\n",
-       "33675   2013-02-16 14:50:00\n",
-       "33676   2013-02-16 15:50:00\n",
-       "33677   2013-02-16 16:00:00\n",
-       "33678   2013-02-16 16:50:00\n",
-       "33679   2013-02-16 17:50:00\n",
-       "33680   2013-02-16 18:50:00\n",
-       "33681   2013-02-16 19:00:00\n",
-       "33682   2013-02-16 19:50:00\n",
-       "33683   2013-02-16 20:50:00\n",
-       "33684   2013-02-16 21:50:00\n",
-       "33685   2013-02-16 22:00:00\n",
-       "33686   2013-02-16 22:50:00\n",
-       "33687   2013-02-16 23:50:00\n",
-       "33688   2013-02-17 00:00:00\n",
-       "Name: DATE, Length: 33689, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "climate_data.DATE.dt.round('5min')\n",
-    "foursquare_data.utcTimestamp = pd.to_datetime(foursquare_data.utcTimestamp).dt.round('5min')"
    ]
   },
   {
@@ -1940,8 +1855,7 @@
    "source": [
     "climate_data['roundedDate'] = climate_data.DATE.dt.round('60min')\n",
     "foursquare_data['roundedDate'] = foursquare_data.utcTimestamp.dt.round('60min')\n",
-    "new_df = pd.merge(foursquare_data, climate_data,  how='left', left_on=['closestStation','roundedDate'], right_on = ['STATION_NAME','roundedDate'])\n",
-    "new_df.sample(10)"
+    "foursquare_climate_df = pd.merge(foursquare_data, climate_data,  how='inner', left_on=['closestStation','roundedDate'], right_on = ['STATION_NAME','roundedDate'])"
    ]
   },
   {
@@ -4688,10 +4602,8 @@
     }
    ],
    "source": [
-    "new_df[new_df.venueId == '49c54c2cf964a520ee561fe3']\n",
-    "new_df2 = pd.merge(foursquare_data, climate_data,  how='inner', left_on=['closestStation','roundedDate'], right_on = ['STATION_NAME','roundedDate'])\n",
-    "new_df2.sample(5)\n",
-    "new_df2[new_df2.venueId == '3fd66200f964a52021e41ee3']"
+    "foursquare_climate_df[foursquare_climate_df.venueId == '49c54c2cf964a520ee561fe3']\n",
+    "foursquare_climate_df[foursquare_climate_df.venueId == '3fd66200f964a52021e41ee3']"
    ]
   },
   {
