Reorganize weather recommendation notebook

--- a/weather-venue-recommendation.ipynb
+++ b/weather-venue-recommendation.ipynb
@@ -20,6 +20,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import implicit\n",
+    "import scipy\n",
     "\n",
     "\"\"\"\n",
     "Attempt matrix factorization from here:\n",
@@ -56,18 +57,6 @@
    "outputs": [],
    "source": [
     "temperature_checkin_count = pd.crosstab(foursquare_climate_data.HOURLYDRYBULBTEMPF, foursquare_climate_data.venueId)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import implicit\n",
-    "import scipy"
    ]
   },
   {
